Bug 291474 - kmail crashed
Summary: kmail crashed
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Account Wizard (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 349439 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-13 19:35 UTC by ARIKO
Modified: 2016-09-15 09:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.1
Sentry Crash Report:


Attachments
The error occurs when the K-mail program is started. (7.80 KB, text/plain)
2012-09-13 16:31 UTC, Reinhard Meys
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ARIKO 2012-01-13 19:35:46 UTC
Application: accountwizard (0.1)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.8.0
Operating System: Linux 3.1.0-7.fc16.x86_64 x86_64

-- Information about the crash:
- What I was doing when the application crashed:

First lauch and configuration of Kmail... i goback to Thunderbird ...

-- Backtrace:
Application: Assistant de création de compte (accountwizard), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
82	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7fef4f49b840 (LWP 2166))]

Thread 2 (Thread 0x7fef3eb48700 (LWP 2209)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:165
#1  0x0000003d97584e62 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x3d9787e240) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x0000003d97584e99 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x0000003102a07d90 in start_thread (arg=0x7fef3eb48700) at pthread_create.c:309
#4  0x00000031026ef48d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7fef4f49b840 (LWP 2166)):
[KCrash Handler]
#6  childIndex (child=0x2366610, this=0xffffbef5894855d4) at ../../src/gui/itemviews/qstandarditemmodel_p.h:91
#7  QStandardItemPrivate::position (this=0x235b940) at itemviews/qstandarditemmodel.cpp:110
#8  0x0000003d8fd78951 in QStandardItemModel::indexFromItem (this=0x23b8080, item=0x23cbf90) at itemviews/qstandarditemmodel.cpp:2149
#9  0x000000000045016b in ProviderPage::fillModel (this=0x23cc8b0, list=...) at /usr/src/debug/kdepim-runtime-4.7.4/accountwizard/providerpage.cpp:66
#10 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x23a9640, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffbc137c10) at kernel/qobject.cpp:3547
#11 0x0000003d95223e12 in KNS3::DownloadManager::searchResult (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/x86_64-redhat-linux-gnu/knewstuff/knewstuff3/downloadmanager.moc:113
#12 0x0000003d95223f81 in KNS3::DownloadManager::Private::_k_slotEntriesLoaded (this=0x23588d0, entries=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/knewstuff/knewstuff3/downloadmanager.cpp:117
#13 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x23b1100, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffbc137dc0) at kernel/qobject.cpp:3547
#14 0x0000003d95229985 in KNS3::Engine::signalEntriesLoaded (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/x86_64-redhat-linux-gnu/knewstuff/knewstuff3/engine.moc:199
#15 0x0000003d9522a3fa in KNS3::Engine::slotEntriesLoaded (this=0x23b1100, request=..., entries=...) at /usr/src/debug/kdelibs-4.7.4/knewstuff/knewstuff3/core/engine.cpp:280
#16 0x0000003d9522e22d in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=0x23b1100, _c=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/x86_64-redhat-linux-gnu/knewstuff/knewstuff3/engine.moc:129
#17 KNS3::Engine::qt_static_metacall (_o=0x23b1100, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/x86_64-redhat-linux-gnu/knewstuff/knewstuff3/engine.moc:103
#18 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x240e1e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffbc137fa0) at kernel/qobject.cpp:3547
#19 0x0000003d9523adfa in KNS3::Provider::loadingFinished (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/x86_64-redhat-linux-gnu/knewstuff/knewstuff3/provider.moc:125
#20 0x0000003d95251ccf in KNS3::AtticaProvider::categoryContentsLoaded (this=0x240e1e0, job=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/knewstuff/knewstuff3/attica/atticaprovider.cpp:230
#21 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x24858c0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffbc1381f0) at kernel/qobject.cpp:3547
#22 0x0000003d90828fef in Attica::BaseJob::finished (this=<optimized out>, _t1=0x24858c0) at /usr/src/debug/attica-0.2.0/x86_64-redhat-linux-gnu/lib/atticabasejob.moc:95
#23 0x0000003d90829415 in Attica::BaseJob::dataFinished (this=0x24858c0) at /usr/src/debug/attica-0.2.0/lib/atticabasejob.cpp:115
#24 0x0000003d908299cc in Attica::BaseJob::qt_metacall (this=0x24858c0, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffbc138420) at /usr/src/debug/attica-0.2.0/x86_64-redhat-linux-gnu/lib/atticabasejob.moc:82
#25 0x0000003d8df8cecd in QMetaObject::activate (sender=0x2457190, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3566
#26 0x0000003d928c417c in KDEPrivate::AccessManagerReply::slotResult (this=0x2457190, kJob=0x2430430) at /usr/src/debug/kdelibs-4.7.4/kio/kio/accessmanagerreply_p.cpp:366
#27 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x2430430, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffbc138620) at kernel/qobject.cpp:3547
#28 0x0000003d8f141d92 in KJob::result (this=<optimized out>, _t1=0x2430430) at /usr/src/debug/kdelibs-4.7.4/x86_64-redhat-linux-gnu/kdecore/kjob.moc:208
#29 0x0000003d8f141dd0 in KJob::emitResult (this=0x2430430) at /usr/src/debug/kdelibs-4.7.4/kdecore/jobs/kjob.cpp:312
#30 0x0000003d928fbb54 in KIO::SimpleJob::slotFinished (this=0x2430430) at /usr/src/debug/kdelibs-4.7.4/kio/kio/job.cpp:494
#31 0x0000003d92903602 in KIO::TransferJob::slotFinished (this=0x2430430) at /usr/src/debug/kdelibs-4.7.4/kio/kio/job.cpp:1081
#32 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x244e6d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#33 0x0000003d929a8b21 in KIO::SlaveInterface::dispatch (this=<optimized out>, _cmd=104, rawdata=...) at /usr/src/debug/kdelibs-4.7.4/kio/kio/slaveinterface.cpp:172
#34 0x0000003d929a59e5 in KIO::SlaveInterface::dispatch (this=0x244e6d0) at /usr/src/debug/kdelibs-4.7.4/kio/kio/slaveinterface.cpp:88
#35 0x0000003d92998ace in KIO::Slave::gotInput (this=0x244e6d0) at /usr/src/debug/kdelibs-4.7.4/kio/kio/slave.cpp:344
#36 0x0000003d8df8ccd1 in QMetaObject::activate (sender=0x23ca8b0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#37 0x0000003d928cce67 in dequeue (this=<optimized out>) at /usr/src/debug/kdelibs-4.7.4/kio/kio/connection.cpp:82
#38 KIO::ConnectionPrivate::dequeue (this=0x24920d0) at /usr/src/debug/kdelibs-4.7.4/kio/kio/connection.cpp:71
#39 0x0000003d8df91f06 in QObject::event (this=0x23ca8b0, e=<optimized out>) at kernel/qobject.cpp:1195
#40 0x0000003d8f7c9994 in notify_helper (e=0x23fe350, receiver=0x23ca8b0, this=0x20f04f0) at kernel/qapplication.cpp:4550
#41 QApplicationPrivate::notify_helper (this=0x20f04f0, receiver=0x23ca8b0, e=0x23fe350) at kernel/qapplication.cpp:4522
#42 0x0000003d8f7ce813 in QApplication::notify (this=0x7fffbc139930, receiver=0x23ca8b0, e=0x23fe350) at kernel/qapplication.cpp:4411
#43 0x0000003d90e50766 in KApplication::notify (this=0x7fffbc139930, receiver=0x23ca8b0, event=0x23fe350) at /usr/src/debug/kdelibs-4.7.4/kdeui/kernel/kapplication.cpp:311
#44 0x0000003d8df7903c in QCoreApplication::notifyInternal (this=0x7fffbc139930, receiver=0x23ca8b0, event=0x23fe350) at kernel/qcoreapplication.cpp:876
#45 0x0000003d8df7caca in sendEvent (event=0x23fe350, receiver=0x23ca8b0) at kernel/qcoreapplication.h:231
#46 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x20c0450) at kernel/qcoreapplication.cpp:1500
#47 0x0000003d8dfa7923 in sendPostedEvents () at kernel/qcoreapplication.h:236
#48 postEventSourceDispatch (s=0x20f4f60) at kernel/qeventdispatcher_glib.cpp:279
#49 0x0000003104644a7d in g_main_dispatch (context=0x20f38e0) at gmain.c:2425
#50 g_main_context_dispatch (context=0x20f38e0) at gmain.c:2995
#51 0x0000003104645278 in g_main_context_iterate (context=0x20f38e0, block=<optimized out>, dispatch=1, self=<optimized out>) at gmain.c:3073
#52 0x000000310464544c in g_main_context_iteration (context=0x20f38e0, may_block=1) at gmain.c:3136
#53 0x0000003d8dfa7d4f in QEventDispatcherGlib::processEvents (this=0x20c1cb0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#54 0x0000003d8f86c61e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:207
#55 0x0000003d8df78172 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#56 0x0000003d8df783c7 in QEventLoop::exec (this=0x7fffbc139850, flags=...) at kernel/qeventloop.cpp:204
#57 0x0000003d8df7cdc5 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#58 0x0000000000435446 in main (argc=3, argv=0x7fffbc139d78) at /usr/src/debug/kdepim-runtime-4.7.4/accountwizard/main.cpp:76

Reported using DrKonqi
Comment 1 Reinhard Meys 2012-09-13 16:31:43 UTC
Created attachment 73892 [details]
The error occurs when the K-mail program is started.
Comment 2 Myriam Schweingruber 2012-09-14 16:09:53 UTC
(In reply to comment #1)
> Created attachment 73892 [details]
> The error occurs when the K-mail program is started.

Reinhard: your backtrace shows a completely different bug, please do not attach crash reports if you are not sure it really is the same (by reading the backtrace). Please file a new report.
Comment 3 Daniel Vrátil 2016-09-15 09:22:19 UTC
Git commit 1e38a73a143552c4438543ce6d11b22d50a8927f by Daniel Vrátil.
Committed on 15/09/2016 at 09:20.
Pushed by dvratil into branch 'Applications/16.08'.

Fix potential crash if ProviderPage::fillModel() is called twice

QStandardItemModel::removeRows() actually deletes the child item,
so we should not keep a dangling pointer to it around.
FIXED-IN: 16.08.1

M  +4    -1    accountwizard/src/providerpage.cpp

http://commits.kde.org/kdepim/1e38a73a143552c4438543ce6d11b22d50a8927f
Comment 4 Daniel Vrátil 2016-09-15 09:22:38 UTC
Git commit d0941393fc1502463fca6d02abe4c6a83da700de by Daniel Vrátil.
Committed on 15/09/2016 at 09:21.
Pushed by dvratil into branch 'master'.

Fix potential crash if ProviderPage::fillModel() is called twice

QStandardItemModel::removeRows() actually deletes the child item,
so we should not keep a dangling pointer to it around.
FIXED-IN: 16.08.1

M  +4    -1    src/providerpage.cpp

http://commits.kde.org/kmail-account-wizard/d0941393fc1502463fca6d02abe4c6a83da700de
Comment 5 Daniel Vrátil 2016-09-15 09:32:46 UTC
*** Bug 349439 has been marked as a duplicate of this bug. ***