Fix potential crash if ProviderPage::fillModel() is called twice

QStandardItemModel::removeRows() actually deletes the child item,
so we should not keep a dangling pointer to it around.

BUG: 291474
FIXED-IN: 16.08.1